--- a/views/products.html
+++ b/views/products.html
@@ -7,9 +7,21 @@
   <a href='/products' class='btn btn-default'>Show All Products</a>
   {% endif %}
 </div>
+<div class='well'>
+  <form method='POST' action='/products'>
+    <div class='form-group'>
+      <input name='name' class='form-control' placeholder='Enter name' />
+    </div>
+    <div class='form-group'>
+      <input name='description' class='form-control' placeholder='Enter description' />
+    </div>
+    <button class='btn btn-primary' type='submit'>Insert Product</button>
+  </form>
+</div>
     {% for product in products %}
-    <div class='product panel panel-danger'>
-      <h2>
+    <div class='product panel panel-default'>
+      <div class='panel-heading'>
+        <h3>
       {% if title === 'Products' %}
         {% if product === selected %}
           <a href='/products'>{{ product.name }}</a>
@@ -23,15 +35,11 @@
           <a href='/products/active/{{product.name}}'>{{ product.name }}</a>
         {% endif %}
       {% endif %}
-      </h2>
-      {% if product === selected %}
-      <div class='detail'>
-        {{ product.description }}
-        <form method='POST' action='/products/{{product.id}}?_method=DELETE'>
-          <button class='btn btn-danger' type='submit'>Delete</button>
-        </form>
+        </h3>
       </div>
-      {% endif %}
+      <div class='panel-body'>
+        {% include 'product.html' %}
+      </div>
     </div>
     {% endfor %}
 {% endblock %}
