move static dir

--- a/views/layout.html
+++ b/views/layout.html
@@ -2,7 +2,7 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.css' />
-    <link rel='stylesheet' href='/public/css/styles.css' />
+    <link rel='stylesheet' href='/client/css/styles.css' />
   </head>
   <body>
     <ul class='nav nav-tabs'>
